--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: lightblue;
+    background-color: green;
 }
 svg {
     display: block;
@@ -27,12 +26,24 @@ p{
     text-align: center;
 }
 
-#button{
-    justify-content: center;
-    background-origin: padding-box;
-    padding-left: 10px;
-    margin: 20px;
+#button {
+        background-color: purple;
+        color: #4b0014;
+        font-size: 24px;
+        font-weight: bold;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 10px;
+        text-transform: uppercase;
+        box-shadow: 5px 5px 0px #6b0023;
+        cursor: pointer;
+        display: block;
+        margin: 20px auto;
 }
+	
+#button:hover {
+            background-color: #ff6688;
+        }
 
 h1{
     text-align: center;
